# Speaker-Controller

./: README.md  controller.js  package.json  start.bat
.github/workflows/: build.yml  mac-build.yml
app/: index.html  package-lock.json  package.json  vite.config.ts
app/src/: App.vue  Led.vue  Switch.vue  Toggle.vue  serial.ts
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: lib.rs  main.rs
controller/: config.js  icons.js  index.js  package-lock.json  package.json
images/: icon.pdn
models/: Part_1.stl  Part_2.stl  Part_3.stl  Part_4.stl
sketch/: sketch.ino  sketch.txt
